server/cross-device-scripts/features/iptables/iptables

# Generated by iptables-save v1.6.0 on Fri Apr 27 15:43:55 2018
*filter
:INPUT ACCEPT [48822:8912349]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [49046:8031497]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -i eth0 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o eth0 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Fri Apr 27 15:43:55 2018
# Generated by iptables-save v1.6.0 on Fri Apr 27 15:43:55 2018
*nat
:PREROUTING ACCEPT [6577:473718]
:INPUT ACCEPT [5872:358855]
:OUTPUT ACCEPT [2813:187625]
:POSTROUTING ACCEPT [348:28985]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Fri Apr 27 15:43:55 2018
